--- a/src/css/style.css
+++ b/src/css/style.css
@@ -3,22 +3,51 @@
 html {
     height: 100%;
 }
+
 body {
+    background-color: #1A6706;
     font-family: Roboto, sans-serif;
     height: 100%;
     width: 100%;
-}
-
-select-zone {
-    background-color: darkgreen;
+    margin: 0 0 0 10px;
+    padding: 0;
 }
 
 header {
-    background: white;
-    color: #494949;
+    /*background: white;*/
+    color: #FFF;
+    height: 10wv;
 }
+
+#container {
+    width: 100vw;
+    height: 100%;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+#text-elements {
+    width: 25%;
+}
+
+#filter-input {
+    width: 100%;
+    margin: 0px;
+}
+
+ul {
+    list-style-type: none;
+    height: 25px;
+    border: 1px 0;
+    border-color: black;
+}
+
+/* select-zone {
+    background-color: darkgreen;
+    width: 100%;
+}*/
 
 #map {
     height: 100%;
-    width: 87vw;
+    width: 75%;
 }
