--- a/src/css/style.css
+++ b/src/css/style.css
@@ -33,7 +33,7 @@ h1 {
 }
 
 #text-elements {
-    width: 25%;
+    width: 25%; 
 }
 
 #filter-input {
@@ -42,9 +42,9 @@ h1 {
     border-style: none;
 }
 
-ul {
+#list {
     list-style-type: none;
-    margin: 30px 0;
+    margin: 20px 0 0;
     padding: 0;
 }
 
@@ -82,4 +82,16 @@ li:last-of-type {
 #map {
     height: 100%;
     width: 75%;
+}
+
+@media only screen and (max-width: 1000px) {
+    #text-elements {
+        width: 100%;
+        height: 360px;
+        overflow-y: scroll;
+    }
+
+    #map {
+        width: 100%;
+    }
 }
