--- a/src/css/style.css
+++ b/src/css/style.css
@@ -84,6 +84,22 @@ li:last-of-type {
     width: 75%;
 }
 
+h2 {
+    font-size: 15px;
+    font-weight: 700;
+    color: #123201;
+}
+
+.photos {
+    
+}
+
+img {
+    height: 150px;
+    float: left;
+    padding: 10px;
+}
+
 @media only screen and (max-width: 1000px) {
     #text-elements {
         width: 100%;
